# packt_graphDataModelling

./: pyproject.toml
01_graphsInTheRealWorld/: igraph_intro.py  networkx.py
