[tool.poetry]
name = "packt-graphdatamodelling"
version = "0.1.0"
description = "Graph Data Modelling in Python"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "packt_graphdatamodelling"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
networkx = "^3.1"
igraph = "^0.10.5"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.17.4"
pytest = "^7.4.0"
mypy = "^1.4.1"
ipython = "^8.14.0"
ipykernel = "^6.23.3"
pycairo = "^1.24.0"
pyqt5 = "^5.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
